kubernetes-bdp/ags-apmgr.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ags-apmgr
  labels:
    app: ags-apmgr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ags-apmgr
  template:
    metadata:
      labels:
        app: ags-apmgr
    spec:
      containers:
      - name: ags-apmgr
        image: 10.16.0.144:5000/ags-apmgr/ags-apmgr-dev:20190524100005
        command: ["/export/servers/monit/bin/monit"]
        args: ["-I"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-ags-apmgr-service
  labels:
    app: bdp-private-ags-apmgr
spec:
  type: NodePort
  ports:
  - port: 8080
    name: server
    targetPort: 8080
    nodePort: 30086
  selector:
    app: ags-apmgr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ags-apmgr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ags-apmgr.bdp-private.com
    http:
      paths:
      - backend:
          serviceName: bdp-private-ags-apmgr-service
          servicePort: 8080
