kubernetes-bdp/idata-map.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: idata-map
  labels:
    app: idata-map
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idata-map
  template:
    metadata:
      labels:
        app: idata-map
    spec:
      containers:
      - name: idata-map
        image: 10.16.0.144:5000/idata-map/idata-map-middle-platform-dev:20190527210512
        command: ["/export/servers/monit/bin/monit"]
        args: ["-I"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-idata-map-service
  labels:
    app: idata-map
spec:
  type: NodePort
  ports:
  - port: 8080
    name: server
    targetPort: 8080
    nodePort: 30099
  selector:
    app: idata-map

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idata-map-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: idata-map.bdp-private.com
    http:
      paths:
      - backend:
          serviceName: bdp-private-idata-map-service
          servicePort: 8080
