kubernetes-bdp/sch-web-inner.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sch-web-inner
  labels:
    app: sch-web-inner
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sch-web-inner
  template:
    metadata:
      labels:
        app: sch-web-inner
    spec:
      containers:
      - name: sch-web-inner
        image: 10.16.0.144:5000/sch-web-inner/sch-web-inner-middle-platform-dev:20190527183122
        command: ["/export/servers/monit/bin/monit"]
        args: ["-I"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-sch-web-inner-service
  labels:
    app: bdp-private-sch-web-inner
spec:
  type: NodePort
  ports:
  - port: 8080
    name: server
    targetPort: 8080
    nodePort: 30180
  selector:
    app: sch-web-inner
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: idata-sch-web-inner-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: idata-sch-web-inner.bdp-private.com
    http:
      paths:
      - backend:
          serviceName: bdp-private-sch-web-inner-service
          servicePort: 8080
