kubernetes-bdp/uc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: uc
  labels:
    app: uc
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uc
  template:
    metadata:
      labels:
        app: uc
    spec:
      containers:
      - name: uc
        image: 10.16.0.144:5000/uc/uc-middle-platform-dev:20190524100350
        command: ["/export/servers/monit/bin/monit"]
        args: ["-I"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bdp-private-uc-service
  labels:
    app: bdp-private-uc
spec:
  type: NodePort
  ports:
  - port: 8080
    name: server
    targetPort: 8080
    nodePort: 30082
  selector:
    app: uc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: uc.bdp-private.com
    http:
      paths:
      - backend:
          serviceName: bdp-private-uc-service
          servicePort: 8080
